--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "calidad",
-  "version": "1.0.0",
-  "description": "Mi primer código NODEJS",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/siarcarse/calidad.git"
-  },
-  "keywords": [
-    "js"
-  ],
-  "author": "siarcarse",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/siarcarse/calidad/issues"
-  },
-  "homepage": "https://github.com/siarcarse/calidad#readme",
-  "dependencies": {
-    "express": "^4.16.3",
-    "hapi": "^17.2.3"
-  }
+    "name": "calidad",
+    "version": "1.0.0",
+    "description": "Mi primer código NODEJS",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/siarcarse/calidad.git"
+    },
+    "keywords": [
+        "js"
+    ],
+    "author": "siarcarse",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/siarcarse/calidad/issues"
+    },
+    "homepage": "https://github.com/siarcarse/calidad#readme",
+    "dependencies": {
+        "dotenv": "^5.0.1",
+        "hapi": "^16.6.3",
+        "hapi-postgres-connection": "^6.5.0",
+        "hapi-router": "^3.5.0"
+    }
 }
