--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "test": "lab -c"
+        "test": "lab -M 5000 -c"
     },
     "repository": {
         "type": "git",
@@ -25,10 +25,12 @@
         "hapi": "^16.6.3",
         "hapi-postgres-connection": "^6.5.0",
         "hapi-router": "^3.5.0",
+        "inert": "^4.2.1",
         "joi": "^13.1.2"
     },
     "devDependencies": {
         "code": "^5.2.0",
-        "lab": "^14.3.4"
+        "lab": "^14.3.4",
+        "zombie": "^6.1.1"
     }
 }
